--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "dayjs": "^1.11.7",
+    "dotenv": "^16.0.3",
+    "mapbox-gl": "^2.14.1",
     "mui": "^0.0.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.6.9",
     "react-calendar": "^4.2.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-map-gl": "^7.0.23",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "reactjs-popup": "^2.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
