--- a/package.json
+++ b/package.json
@@ -7,16 +7,21 @@
     "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.12.3",
+    "@mui/x-date-pickers": "^6.4.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "mapbox-gl": "^2.14.1",
     "polished": "^4.2.2",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.4",
     "react-big-calendar": "^1.6.9",
+    "react-bootstrap": "^2.7.4",
+    "react-calendar": "^4.2.1",
     "react-dom": "^18.2.0",
+    "react-map-gl": "^7.0.23",
     "react-router-dom": "^6.11.1",
     "react-scripts": "^5.0.1",
+    "reactjs-popup": "^2.0.5",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
