--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chromedriver": "^113.0.0",
     "mapbox-gl": "^2.14.1",
+    "mocha": "^10.2.0",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-big-calendar": "^1.6.9",
@@ -22,6 +24,7 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "^5.0.1",
     "reactjs-popup": "^2.0.5",
+    "selenium-webdriver": "^4.9.2",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
