Fixed errors in package.json

--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "chromedriver": "^113.0.0",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
+    "file-saver": "^2.0.5",
     "mapbox-gl": "^2.14.1",
     "mocha": "^10.2.0",
     "mui": "^0.0.1",
+    "papaparse": "^5.4.1",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-big-calendar": "^1.6.9",
